# MITK

./: CMakeLists.txt  MITKConfig.cmake.in  index.html  mitk-encoding.md  params.json
CMakeExternals/: CTK.cmake  ExternalProjectList.cmake  GDCM.cmake  ITK.cmake
Core/Code/Algorithms/: mitkExtractSliceFilter.cpp
Core/Code/DataManagement/: mitkSlicedGeometry3D.cpp
Core/Code/IO/: mitkDicomSeriesReader.cpp  mitkDicomSeriesReader.h  mitkImageGenerator.h
Examples/: CMakeLists.txt
Examples/DICOMPredictor/: CMakeLists.txt  DICOMPredictorUI.cpp  DICOMPredictorUI.h  DICOMPredictorUI.ui  main.cpp
Examples/LoadDICOM/: CMakeLists.txt  QmitkDicomView.cpp  QmitkDicomView.h  QmitkDicomView.ui  main.cpp
Examples/QtRenderingPerformanceDemonstrator/: CMakeLists.txt  QmitkRenderScene.cpp  QmitkRenderScene.h  QmitkRenderScene.ui  main.cpp  mitkTestDataLocation.h.in
Modules/: CMakeLists.txt
Modules/Core/: CMakeLists.txt  files.cmake
Modules/DICOMReader/: mitkDICOMFileReader.cpp  mitkDICOMFileReader.h  mitkDICOMITKSeriesGDCMReader.cpp  mitkDICOMITKSeriesGDCMReader.h  mitkDICOMSortCriterion.cpp  mitkDICOMTag.cpp  mitkDICOMTag.h  mitkITKDICOMSeriesReaderHelper.cpp  mitkITKDICOMSeriesReaderHelper.h  mitkITKDICOMSeriesReaderHelper.txx
Modules/LegacyIO/: mitkItkImageFileReader.cpp
Modules/Qmitk/: QmitkServiceListWidget.cpp
Modules/mitkDICOM/: CMakeLists.txt  files.cmake  mitkDICOMDataset.h  mitkDICOMImage.h  mitkDICOMImageReader.h  mitkDICOMSeries.h  mitkDICOMSeriesMapperVtk2D.h  mitkDICOMSeriesReader.h  mitkDICOMSeriesSortCriterion.h  mitkDICOMSortByTag.h
(+51 files in other folders)
